# modern-cpp-bonn

./: .clang-format  README.md
.github/workflows/: cmake-build.yml
homework_2/task_1/: CMakeLists.txt  build.sh
homework_2/task_1/src/: main.cpp
homework_2/task_2/: CMakeLists.txt  build.sh
homework_2/task_2/.cache/clangd/index/: main.cpp.B1F060233AF91F8D.idx
homework_2/task_2/src/: main.cpp
homework_3/: CMakeLists.txt  build.sh  run_tests.sh
homework_3/src/: html_writer.cpp  image_browser.cpp  test_html_writer.cpp  test_image_browser.cpp
homework_3/web_app/: test_html_writer.html  test_image_browser.html
homework_4/: .gitignore  CMakeLists.txt
homework_4/include/: homework_4.h  ipb_algorithm.h
homework_4/src/: example.cpp  ipb_algorithm.cpp  trial.cpp
homework_4/tests/: CMakeLists.txt
homework_5/: CMakeLists.txt  build.sh
homework_5/dev/: CMakeLists.txt  dataset_trial.cpp
homework_5/include/: convert_dataset.hpp  homework_5.h  serialize.hpp
homework_5/src/: convert_dataset.cpp  dataset_trial.cpp  serialize.cpp  trial.cpp
homework_5/tests/: CMakeLists.txt  sifts_internal.cpp  test_convert_dataset.cpp
homework_6/: CMakeLists.txt  build.sh
homework_6/cmake/: StaticAnalyzers.cmake
homework_6/dev/: CMakeLists.txt  histogram_trial.cpp  image_scale_trial.cpp  image_trial.cpp  scaling_trial.cpp
homework_6/include/: image.cpp  image.hpp
homework_6/include/io_tools/: io_tools.cpp
homework_6/tests/: CMakeLists.txt  test_from_file.cpp  test_histogram.cpp  test_resize.cpp
homework_7/: CMakeLists.txt  build.sh
homework_7/dev/: CMakeLists.txt  kmeans_dev.cpp  kmeans_opencv.cpp  kmeans_testing.cpp  sift_serialization.cpp
homework_7/include/: bow_dictionary.hpp  convert_dataset.hpp  homework_7.h  kmeans.hpp  serialize.hpp
homework_7/src/: bow_dictionary.cpp  k_means.cpp  kmeans.cpp  kmeans_opencv.cpp
homework_7/tests/: test_data.cpp  test_data.hpp  test_kmeans.cpp  test_utils.hpp
homework_8/task_1/: CMakeLists copy.txt  CMakeLists.txt  build.sh
homework_8/task_1/src/: stack_limit.cpp
homework_8/task_2/: CMakeLists.txt  apt-requirements.txt  build.sh
homework_8/task_2/data/: write_pbmlib.ppm
homework_8/task_2/dev/: CMakeLists.txt  img_iostrat_dev.cpp  read_ppm  read_ppm.cpp  read_ppm_dev.cpp  write_ppm.cpp
homework_8/task_2/include/: homework_8.h  image.hpp  io_strategy.hpp  pixel.hpp  string_utils.hpp
homework_8/task_2/src/: image.cpp  io_strategy.cpp  string_utils.cpp
homework_8/task_2/tests/: test_from_png.cpp  test_from_ppm.cpp  test_resize.cpp
homework_9/: .gitignore  CMakeLists.txt  build.sh
homework_9/dev/: CMakeLists.txt  histogram_trial.cpp  test_data.cpp
homework_9/include/: bow_dictionary.hpp  histogram.hpp  histogram_utils.hpp  homework_9.h  kmeans.hpp
homework_9/src/: bow_dictionary.cpp  histogram.cpp  histogram_utils.cpp  kmeans.cpp
homework_9/tests/: CMakeLists.txt  test_data.cpp  test_data.hpp  test_dictionary.cpp  test_histograms.cpp
